# quicktex-rs

./: Cargo.toml
.github/workflows/: cargo-test-publish.yaml
src/: blocks.rs  blocktexture.rs  color.rs  container.rs  dds.rs  dimensions.rs  error.rs  format.rs  lib.rs  main.rs  matrix.rs  pack.rs  shape.rs  texture.rs  util.rs
src/container/: dds.rs  mod.rs
src/container/dds/: dx10_header.rs  header.rs  mod.rs  pixel_format.rs
src/dds/: header.rs  mod.rs  pixel_format.rs  tests.rs
src/s3tc/: bc1.rs  bc3.rs  bc4.rs  bc5.rs  mod.rs
src/s3tc/bc1/: decode.rs  encode.rs  mod.rs
test/cubemap/: cubemap.blend  make_dds.sh
tests/: dds.rs
tests/dds/: cubemap.dds  main.rs  peppers16 bc4.dds  peppers16 bc5.dds
tests/images/: cubemap.blend  cubemap.dds  make_dds.fish  make_dds.sh
tests/images/dds/: drill.dds  peppers16 bc1.dds  peppers16 lumi.dds  peppers16 rgb.dds
