[package]
name = "quicktex"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
bitvec = "1.0.1"
clap = { version = "4.3", features = ["cargo"] }
enumflags2 = { version = "0.7.7", features = ["std"] }
funty = "2.0.0"
image = "0.25.1"
itertools = "0.11"
rayon = "1.7.0"
strum = { version = "0.26.0", features = ["derive"] }
thiserror = "1.0.40"
vector-victor = "0.1.0"
binrw = "0.13.3"
lazycell = "1.3.0"

[dev-dependencies]
tempfile = "3.10"
anyhow = "1.0"