[package]
name = "quicktex"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
bitvec = "1.0"
clap = { version = "4.3", features = ["cargo"] }
enumflags2 = { version = "0.7", features = ["std"] }
funty = "2.0"
image = "0.25"
itertools = "0.13"
rayon = "1.7"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
vector-victor = "0.1.0"
binrw = "0.14"
lazycell = "1.3"

[dev-dependencies]
tempfile = "3.10"
anyhow = "1.0"
generic_parameterize = "0.3.0"